@@ -4,4 +4,4 @@
 </xqdoc:description><xqdoc:see>http://example.com</xqdoc:see></xqdoc:comment></xqdoc:module><xqdoc:imports><xqdoc:import><xqdoc:uri>http://www.zorba-xquery.com/zorba/internal-functions</xqdoc:uri></xqdoc:import><xqdoc:import><xqdoc:uri>http://www.28msec.com/modules/atom</xqdoc:uri></xqdoc:import><xqdoc:import><xqdoc:uri>http://www.zorba-xquery.com/zorba/rest-functions</xqdoc:uri></xqdoc:import></xqdoc:imports><xqdoc:variables><xqdoc:variable><xqdoc:uri>version</xqdoc:uri><xqdoc:comment><xqdoc:description> Import the Atom XML Schema
 </xqdoc:description><xqdoc:see>http://www.kbcafe.com/rss/atom.xsd.xml</xqdoc:see></xqdoc:comment></xqdoc:variable><xqdoc:variable><xqdoc:uri>id</xqdoc:uri><xqdoc:comment><xqdoc:description> Google ID
 </xqdoc:description><xqdoc:see>http://www.google.com</xqdoc:see></xqdoc:comment></xqdoc:variable><xqdoc:variable><xqdoc:uri>authToken</xqdoc:uri></xqdoc:variable></xqdoc:variables><xqdoc:functions><xqdoc:function><xqdoc:comment><xqdoc:description> Google Login
-</xqdoc:description><xqdoc:param>account This parameter will be deleted by the test query.</xqdoc:param><xqdoc:param>password This description must have the whitespaces normalized.</xqdoc:param><xqdoc:see>http://www.google.com</xqdoc:see></xqdoc:comment><xqdoc:name>login</xqdoc:name><xqdoc:signature>declare function gdata:login($account as xs:string*, $password as xs:string+, $service as xs:string?) as xs:boolean+</xqdoc:signature><xqdoc:invoked><xqdoc:uri>http://www.w3.org/2005/xpath-functions</xqdoc:uri><xqdoc:name>false#0</xqdoc:name></xqdoc:invoked><xqdoc:invoked><xqdoc:uri>http://www.w3.org/2005/xpath-functions</xqdoc:uri><xqdoc:name>substring-after#2</xqdoc:name></xqdoc:invoked><xqdoc:invoked><xqdoc:uri>http://www.w3.org/2005/xpath-functions</xqdoc:uri><xqdoc:name>true#0</xqdoc:name></xqdoc:invoked><xqdoc:invoked><xqdoc:uri>http://www.zorba-xquery.com/zorba/rest-functions</xqdoc:uri><xqdoc:name>post#2</xqdoc:name></xqdoc:invoked></xqdoc:function><xqdoc:function><xqdoc:name>get-headers</xqdoc:name><xqdoc:signature>declare function gdata:get-headers() as element(rest:headers)</xqdoc:signature><xqdoc:invoked><xqdoc:uri>http://www.w3.org/2001/XMLSchema</xqdoc:uri><xqdoc:name>QName#1</xqdoc:name></xqdoc:invoked><xqdoc:invoked><xqdoc:uri>http://www.w3.org/2005/xpath-functions</xqdoc:uri><xqdoc:name>error#2</xqdoc:name></xqdoc:invoked></xqdoc:function><xqdoc:function><xqdoc:name>get-google-id</xqdoc:name><xqdoc:signature>declare function gdata:get-google-id() as xs:string</xqdoc:signature><xqdoc:invoked><xqdoc:uri>http://www.w3.org/2005/xpath-functions</xqdoc:uri><xqdoc:name>encode-for-uri#1</xqdoc:name></xqdoc:invoked></xqdoc:function></xqdoc:functions></xqdoc:xqdoc>
+</xqdoc:description><xqdoc:param>account This parameter will be deleted by the test query.</xqdoc:param><xqdoc:param>password This description must have the whitespaces normalized.</xqdoc:param><xqdoc:see>http://www.google.com</xqdoc:see></xqdoc:comment><xqdoc:name arity="3">login</xqdoc:name><xqdoc:signature>declare function gdata:login($account as xs:string*, $password as xs:string+, $service as xs:string?) as xs:boolean+</xqdoc:signature><xqdoc:invoked><xqdoc:uri>http://www.w3.org/2005/xpath-functions</xqdoc:uri><xqdoc:name arity="0">false</xqdoc:name></xqdoc:invoked><xqdoc:invoked><xqdoc:uri>http://www.w3.org/2005/xpath-functions</xqdoc:uri><xqdoc:name arity="2">substring-after</xqdoc:name></xqdoc:invoked><xqdoc:invoked><xqdoc:uri>http://www.w3.org/2005/xpath-functions</xqdoc:uri><xqdoc:name arity="0">true</xqdoc:name></xqdoc:invoked><xqdoc:invoked><xqdoc:uri>http://www.zorba-xquery.com/zorba/rest-functions</xqdoc:uri><xqdoc:name arity="2">post</xqdoc:name></xqdoc:invoked></xqdoc:function><xqdoc:function><xqdoc:name arity="0">get-headers</xqdoc:name><xqdoc:signature>declare function gdata:get-headers() as element(rest:headers)</xqdoc:signature><xqdoc:invoked><xqdoc:uri>http://www.w3.org/2001/XMLSchema</xqdoc:uri><xqdoc:name arity="1">QName</xqdoc:name></xqdoc:invoked><xqdoc:invoked><xqdoc:uri>http://www.w3.org/2005/xpath-functions</xqdoc:uri><xqdoc:name arity="2">error</xqdoc:name></xqdoc:invoked></xqdoc:function><xqdoc:function><xqdoc:name arity="0">get-google-id</xqdoc:name><xqdoc:signature>declare function gdata:get-google-id() as xs:string</xqdoc:signature><xqdoc:invoked><xqdoc:uri>http://www.w3.org/2005/xpath-functions</xqdoc:uri><xqdoc:name arity="1">encode-for-uri</xqdoc:name></xqdoc:invoked></xqdoc:function></xqdoc:functions></xqdoc:xqdoc>
