@@ -1,5 +1,5 @@
-<xqdoc:xqdoc xmlns:xqdoc="http://www.xqdoc.org/1.0"><xqdoc:control><xqdoc:date/><xqdoc:version>1.0</xqdoc:version></xqdoc:control><xqdoc:module type="library"><xqdoc:uri>http://www.28msec.com/modules/mymodule</xqdoc:uri><xqdoc:name>unorderedAnnotations.xqlib</xqdoc:name></xqdoc:module><xqdoc:imports/><xqdoc:variables/><xqdoc:functions><xqdoc:function><xqdoc:comment><xqdoc:description> This function contains some unordered annotations.
+<xqdoc:xqdoc xmlns:xqdoc="http://www.xqdoc.org/1.0"><xqdoc:control><xqdoc:date></xqdoc:date><xqdoc:version>1.0</xqdoc:version></xqdoc:control><xqdoc:module type="library"><xqdoc:uri>http://www.28msec.com/modules/mymodule</xqdoc:uri><xqdoc:name>unorderedAnnotations.xqlib</xqdoc:name></xqdoc:module><xqdoc:imports></xqdoc:imports><xqdoc:variables></xqdoc:variables><xqdoc:functions><xqdoc:function><xqdoc:comment><xqdoc:description> This function contains some unordered annotations.
  They should be ordered in the resulting XQDoc XML
  according to the XQDoc schema:
  description author version param return error deprecated see since
-</xqdoc:description><xqdoc:param>$one A dummy param.</xqdoc:param><xqdoc:param>$two One param.</xqdoc:param><xqdoc:return>Place of no return</xqdoc:return><xqdoc:error>Do we throw errors?</xqdoc:error><xqdoc:deprecated/><xqdoc:see>This should be almost at the end</xqdoc:see><xqdoc:since>The beginning of the world.</xqdoc:since></xqdoc:comment><xqdoc:name>foo</xqdoc:name><xqdoc:signature>declare function mymod:foo($one, $two)</xqdoc:signature></xqdoc:function></xqdoc:functions></xqdoc:xqdoc>
+</xqdoc:description><xqdoc:param>$one A dummy param.</xqdoc:param><xqdoc:param>$two One param.</xqdoc:param><xqdoc:return>Place of no return</xqdoc:return><xqdoc:error>Do we throw errors?</xqdoc:error><xqdoc:deprecated></xqdoc:deprecated><xqdoc:see>This should be almost at the end</xqdoc:see><xqdoc:since>The beginning of the world.</xqdoc:since></xqdoc:comment><xqdoc:name arity="2">foo</xqdoc:name><xqdoc:signature>declare function mymod:foo($one, $two)</xqdoc:signature></xqdoc:function></xqdoc:functions></xqdoc:xqdoc>
