@@ -1,7 +1,7 @@
 Zorba - The XQuery Processor
 version 1.4
   * added a datetime library module with nondeterministic functions
-  * new (non)deterministic send-request functions in the http-client module
+  * new nondeterministic read functions in the http-client module
   * the http-client's send-request function accepts a non-validated request parameter
   * fixed an issue with a wrong static context being used in eval queries (see bug item #2979317)
   * added XQuery 1.1 Switch expressions (only available in 1.1 processing mode)
@@ -18,9 +18,11 @@ version 1.4
     - try-catch error if XQuery version < 1.1 (#3005344)
     - W3C test suite bugs CastableAs649 and CastableAs650 (#2999777)
     - assertion in StatelessExtFunctionCallIterator (#3012651)
+    - http-client return type handling for (*+xml and text/html)
   * optimization of fn:subsequence
   * new xqDoc function (xqdoc-content) taking a documented module as string
   * new xqDoc feature; reporting functions invoked from within a particular function
+  * xqDoc schema change; name element for functions got an arity attribute
 
 version 1.2
   * more introspection functions (e.g. in-scope-element and in-scope-attribute)
